--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # ----------------------- #
 
 url: http://chenHongbin.github.io
-title: Robert_Chen
+title: Robert_Chen(陈宏彬)
 subtitle: 既往不念，未来不迎，当下不杂
 author: 陈宏彬
 simple_search: https://www.google.com/search
